--- a/Text Editor/Menu, please/task-info.yaml
+++ b/Text Editor/Menu, please/task-info.yaml
@@ -359,6 +359,9 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/38/stages/203/implement#comment
-status: Unchecked
-record: -1
+feedback_link: https://hyperskill.org/learn/step/5260#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 08 Aug 2022 08:09:16 UTC
+record: 3
