--- a/Text Editor/A window to editing/task-info.yaml
+++ b/Text Editor/A window to editing/task-info.yaml
@@ -65,9 +65,9 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/38/stages/201/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5258#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: Sun, 07 Aug 2022 18:15:10 UTC
-record: -1
+record: 1
